Fixed layout problem.
git-svn-id: https://slim3.googlecode.com/svn/trunk@1500 b3e2f51c-24b7-11de-8e51-c3b0a9a655b4

--- a/slim3demo/war/css/global.css
+++ b/slim3demo/war/css/global.css
@@ -27,7 +27,7 @@ a:hover { background-color: white; }
  background-color: aqua;
 }
 
-#body{
+#main{
  width:600px;
  height:400px;
  float:left;
